--- a/cities.html
+++ b/cities.html
@@ -28,6 +28,7 @@
     <li>Karachi  (12,991,000)</li>
     <li>Mumbai   (12,478,447)</li>
     <li>St. John's   (250,000)</li>
+    <li>London   (404 699)</li>
   </ol>
 
 </body>
